deploy-wpapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"StatefulSet","name":"mysql"}]'
  labels:
    app: wpapp
    app.kubernetes.io/part-of: wpapp
  name: wpapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wpapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wpapp
    spec:
      restartPolicy: Always
      containers:
      - name: wpapp
        image: docker.io/bitnami/wordpress
        resources:
          requests:
            cpu: 125m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: false
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
          name: tcp-wp
          protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /bitnami/wordpress
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: pvc-wp
