sts-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/part-of: wpapp
    app.kubernetes.io/name: mysql
  name: mysql
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: mysql
  serviceName: mysql
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: mysql
      name: mysql
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: mysql-vars
        - secretRef:
            name: mysql-pass
        image: docker.io/bitnami/mysql
        imagePullPolicy: IfNotPresent
        name: mysql
        ports:
        - containerPort: 3306
          name: tcp-mysql
          protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /bitnami/mysql/data
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir:
          medium: Memory
        name: dshm
      - name: data
        persistentVolumeClaim:
          claimName: pvc-mysql
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
