svc-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: wpapp
    app.kubernetes.io/name: mysql
  name: svcmysql
spec:
  clusterIP: None
  ports:
  - name: tcp-mysql
    port: 3306
    protocol: TCP
    targetPort: tcp-mysql
  selector:
    app.kubernetes.io/name: mysql
  type: ClusterIP
