svc-wpapp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wpapp
    app.kubernetes.io/part-of: wpapp
  name: wpapp
spec:
  ports:
  - name: tcp-wpapp
    port: 80
    protocol: TCP
    targetPort: tcp-wp
  selector:
    app: wpapp
  type: ClusterIP
