route-wpapp.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: wpapp
  labels:
    app.kubernetes.io/part-of: wpapp
spec:
  path: /
  to:
    kind: Service
    name: wpapp
    weight: 100
  port:
    targetPort: tcp-wpapp
  wildcardPolicy: None
